# mimiker

./: .ackrc  .clang-format  .clang_complete  .format-exclude  .gdbinit  .gdbinit-common  .gdbinit-kft  .gdbinit-kftrace  .gdbinit-test  .gdbinit.template  .gitignore  .gitmodules  .taghl_config  .tmux.conf  .travis.yml  .ycm_extra_conf.py  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  Makefile.common  Makefile.kernel  README.md  action.sh  args.c  argv_test.c  astyle.options  bitmap.c  bitops.h  bitset.c  bitset.h  build.sh  build_cpio.sh  callout.c  circle.yml  clock.c  clock.h  common.h  config.mk  context-demo.c  (+83 more)
.circleci/: config.yml
contrib/: Makefile
debug/: Makefile  README.md  __init__.py  cmd.py  condvar.py  cpu.py  ctx.py  kdump.py  klog.py  kmem.py  ktrace.py  mutex.py  physmem.py  pmem.py  proc.py  ptable.py  struct.py  sync.py  tailq.py  thread.py  threads.py  utils.py  vars.py
demo/: README.md  demo_pm.c  demos.h
docker/: .gitignore  Dockerfile  Dockerfile.tpl  Makefile  README.md  docker-compose.yml  requirements.txt  run_mimiker.sh
drv/: Makefile  atkbdc.c  device_hints.c  device_hints.dts  hinted_devices.c  ns16550.c  pit.c  rtc.c  stdvga.c
elf/: Makefile  mimiker.ld  prog.c
etc/: .kshrc  Makefile  group  master.passwd  rc.init  rc.shutdown  shells  spleen-8x16.fnt
gdbscripts/: kdump.py  ktrace.py  tailqueue.py  threads.py
include/: Makefile  _bitset.h  _bus.h  _limits.h  _locale.h  _wint.h  args.h  (+175 more)
smallclib/smallclib/: CMakeLists.txt  xyMipsSmallCLib.xyf
smallclib/smallclib/argz/: argz_add.c  argz_add_sep.c  argz_append.c  argz_count.c  argz_create.c  argz_create_sep.c  argz_delete.c  argz_extract.c  argz_insert.c  argz_next.c  argz_replace.c  argz_stringify.c  buf_findstr.c  dummy.c  envz_add.c  envz_entry.c  envz_get.c  envz_merge.c  envz_remove.c  envz_strip.c
smallclib/smallclib/ctype/: isalnum.c  isalpha.c  isascii.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  iswalnum.c  iswalpha.c  iswblank.c  iswcntrl.c  iswctype.c  iswdigit.c  iswgraph.c  iswlower.c  iswprint.c  iswpunct.c  iswspace.c  iswupper.c  iswxdigit.c  isxdigit.c  jp2uc.c  jp2uc.h  toascii.c  tolower.c  toupper.c  towctrans.c  towlower.c  towupper.c  utf8alpha.h  utf8print.h  wctrans.c  wctype.c
smallclib/smallclib/errno/: errno.c
smallclib/smallclib/include/low/: _atexit.h  _ctype.h  _flavour.h  _fpuinst.h  _gpinst.h  _lock.h  _machine.inc  _malloc.h  _math.h  _rand_data.h  _stdio.h  _stdlib.h  _string.h  _time_data.h  buf_findstr.h  db_local.h  extern.h  gd_qnan.h  gdtoa.h  hash.h  mprec.h  page.h  std.h
smallclib/smallclib/license/: COPYING.CLIB
smallclib/smallclib/locale/: __locale_mbtowc.c  __locale_wctomb.c  fix_grouping.c  lctype.c  lctype.h  ldpart.c  ldpart.h  lmessages.c  lmessages.h  lmonetary.c  lmonetary.h  lnumeric.c  lnumeric.h  locale.c  localeconv.c  nl_langinfo.c  setlocale.h  timelocal.c  timelocal.h
smallclib/smallclib/math/: ___dbl_poly2.c  ___flt_poly2.c  asincos_consts.c  e_exp.c  e_j0.c  e_j1.c  e_jn.c  e_log.c  e_rem_pio2.c  e_sqrt.c  ef_exp.c  ef_j0.c  ef_j1.c  ef_jn.c  ef_log.c  ef_rem_pio2.c  ef_sqrt.c  er_gamma.c  er_lgamma.c  erf_data.c  erf_gamma.c  erf_lgamma.c  erff_data.c  k_cos.c  k_rem_pio2.c  k_sin.c  k_tan.c  kf_cos.c  kf_rem_pio2.c  kf_sin.c  kf_tan.c  s_acos.c  s_acosh.c  s_asin.c  s_asinh.c  s_atan.c  s_atan2.c  s_atanh.c  s_cbrt.c  s_ceil.c  (+132 more)
smallclib/smallclib/mathl/: acoshl.c  acosl.c  asinhl.c  asinl.c  atan2l.c  atanhl.c  atanl.c  cbrtl.c  ceill.c  copysignl.c  coshl.c  cosl.c  erfcl.c  erfl.c  exp2l.c  expl.c  expm1l.c  fabsl.c  fdiml.c  floorl.c  fmal.c  fmaxl.c  fminl.c  fmodl.c  frexpl.c  hypotl.c  ilogbl.c  ldexpl.c  lgammal.c  llrintl.c  llroundl.c  local.h  log10l.c  log1pl.c  logl.c  lrintl.c  lroundl.c  modfl.c  nanl.c  nearbyintl.c  (+15 more)
smallclib/smallclib/misc/: ffs.c  fini.c  init.c  setjmp.S  unctrl.c
smallclib/smallclib/search/: bsearch.c  hash.c  hash_bigkey.c  hash_buf.c  hash_func.c  hash_log2.c  hash_page.c  hcreate.c  qsort.c  tdelete.c  tdestroy.c  tfind.c  tsearch.c  twalk.c
smallclib/smallclib/signal/: psignal.c  signal.c  signal_data.c  signal_tiny.c  sigtramp.c
smallclib/smallclib/stdio/: ___low_asnprintf.c  ___low_asprintf.c  ___low_fprintf.c  ___low_fscanf.c  ___low_fwprintf.c  ___low_fwscanf.c  ___low_printf.c  ___low_scanf.c  ___low_snprintf.c  ___low_sprintf.c  ___low_sscanf.c  ___low_swprintf.c  ___low_swscanf.c  ___low_wprintf.c  ___low_wscanf.c  __format_parser.c  __format_parser_float.c  __memcpy.c  __scanf_core.c  __scanf_core_float.c  __scanf_core_int.c  __wformat_parser.c  __wscanf_core.c  asiprintf.c  asniprintf.c  asnprintf.c  asnprintf_float.c  asnprintf_int.c  asprintf.c  asprintf_float.c  asprintf_int.c  clearerr.c  clearerr_nofio.c  diprintf.c  dprintf.c  dprintf_float.c  dprintf_int.c  fclose.c  fclose_nofio.c  fcloseall.c  (+178 more)
smallclib/smallclib/stdlib/: _Exit.c  __adjust.c  __atexit.c  __call_atexit.c  __exp10.c  __ten_mu.c  _strtoxl.c  _strtoxll.c  _wcstoxl.c  _wcstoxll.c  a64l.c  abort.c  abs.c  assert.c  atexit.c  atexit_data.c  atof.c  atoff.c  atoi.c  atol.c  atoll.c  bsearch.c  btowc.c  calloc.c  cxa_atexit.c  cxa_finalize.c  div.c  drand48.c  dtoa.c  ecvtbuf.c  efgcvt.c  environ.c  envlock.c  erand48.c  exit.c  findenv.c  free.c  gdtoa-gethex.c  gdtoa-hexnan.c  getenv.c  (+60 more)
smallclib/smallclib/string/: bcmp.c  bcopy.c  index.c  memccpy.c  memcmp.c  memcpy.S  memmem.c  memmove.c  mempcpy.c  memrchr.c  rindex.c  stpcpy.c  stpncpy.c  strcasecmp.c  strcasestr.c  strcat.c  strchr.c  strchrnul.c  strcoll.c  strcpy.c  strcspn.c  strdup.c  strerror.c  strerror_r.c  strlcat.c  strlcpy.c  strlwr.c  strncasecmp.c  strncat.c  strncpy.c  strndup.c  strnlen.c  strpbrk.c  strrchr.c  strsep.c  strsignal.c  strstr.c  strupr.c  strxfrm.c  swab.c  (+32 more)
smallclib/smallclib/time/: __time_to_tm.c  __tm_to_time.c  asctime.c  clock.c  ctime.c  difftime.c  gmtime.c  langinfo.c  localtime.c  mktime.c  strftime.c  strptime.c  time.c  time_data.c  tzset.c  wcsftime.c
smallclib/smallclib/toolchains/: MultiLibConfig.cmake  ToolChainMIPS.cmake
(+2470 files in other folders)
